[project]
name = "duplicate-finder"
version = "0.1.0"
description = "This script is used to find duplicate files in a directory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "humanize>=4.12.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
